; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/queues/extr_task_queue.c_task_queue_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/queues/extr_task_queue.c_task_queue_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (...)*, i8* }

@impl_regular = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@impl_current = common dso_local global %struct.TYPE_4__* null, align 8
@msg_push_bak = common dso_local global i8* null, align 8
@impl_threaded = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@task_threaded_enable = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @task_queue_init(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  store %struct.TYPE_4__* @impl_regular, %struct.TYPE_4__** @impl_current, align 8
  %5 = load i8*, i8** %4, align 8
  store i8* %5, i8** @msg_push_bak, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @impl_current, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 1
  store i8* %6, i8** %8, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @impl_current, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32 (...)*, i32 (...)** %10, align 8
  %12 = call i32 (...) %11()
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
